# Portex

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  uvicorn.ini
app/: __init__.py  config.py  main.py  websocket.py
app/middleware/: __init__.py  auth.py
app/routes/: __init__.py  admin.py  auth.py  groups.py  health.py  messages.py  tasks.py  users.py  websocket.py
config/: default.yaml
container/agent-runner/: Dockerfile  pyproject.toml
container/agent-runner/src/: __init__.py  event_mapper.py  runner.py  types.py
container/agent-runner/src/ipc/: __init__.py  reader.py  writer.py
container/agent-runner/src/tools/: __init__.py  memory.py  message.py  task.py
docs/: PORTEX_PLAN.md  TODO.md  happyclaw.md  progress.md
docs/cc/: PORTEX_IMPLEMENTATION_PLAN.md  openai_agents_sdk.md
docs/cc-codex/: PORTEX_PLAN.md
docs/plans/: 2026-03-06-m2-5-1-cancel-flow.md  2026-03-06-m2-5-2-timeout-design.md  2026-03-06-m2-5-2-timeout-flow.md  2026-03-06-m2-5-3-cancel-ui-design.md  2026-03-06-m2-5-3-cancel-ui-flow.md  2026-03-06-m2-6-1-acceptance-flow.md  2026-03-07-m3-1-docker-sdk-integration.md  2026-03-07-m3-2-agent-runner-containerization.md  2026-03-07-m3-3-volume-mount-safety.md
domain/: __init__.py  exceptions.py  schemas.py
domain/models/: __init__.py  base.py  group.py  message.py  session.py  task.py  user.py
infra/db/: __init__.py  database.py  session.py
infra/exec/: __init__.py  (+4 more)
pocs/: __init__.py
portex/: __init__.py
scripts/: build_docker.py  commit_push.sh  init_db.py
services/: __init__.py  agent_trigger.py  auth.py  execution_mode.py  group_queue.py  memory.py  message_service.py  scheduler.py  skills.py
tasks/: todo.md
web/: package-lock.json  package.json
(+84 files in other folders)
